Fixed layout issues with hero images

--- a/_app/css/modules/frontpage-hero-images.css
+++ b/_app/css/modules/frontpage-hero-images.css
@@ -1,3 +1,20 @@
 .frontpage-hero-images {
+	height: 60vh;
 	margin-bottom: var(--gap-section);
+	padding: 1rem;
+	overflow: hidden;
+	gap: var(--gap-row);
 }
+
+.frontpage-hero-image {
+	width: 100%;
+	height: 100%;
+}
+
+.frontpage-hero-image img {
+	width: 100%;
+	height: 100%;
+}
+
+
+
